Implementacion realizada
